# consistenttime

./: Cargo.toml  README.md
audit_CURRENT/: lib_expanded.rs  lib_x64_msvc.nasm
audit_x64_msvc/: build_script_x64_msvc.sh  lib_x64_msvc.masm  lib_x64_msvc_v2.nasm  lib_x64_msvc_v3.nasm
audit_x64_msvc_LEGACY/: lib_expanded.rs  lib_x64_msvc.asm  lib_x64_msvc.gasm  lib_x64_msvc.nasm  lib_x64_msvc.yasm  readme.txt
benches/: copy.rs  eq.rs  eq_slice.rs  select.rs
docs/: index.html  search-index.js
docs/consistenttime/: ct_copy_u16.v.html  ct_copy_u32.v.html  ct_copy_u64.v.html  ct_copy_u8.v.html  ct_copy_usize.v.html  ct_select_u16.v.html  ct_select_u32.v.html  ct_select_u64.v.html  ct_select_u8.v.html  ct_select_usize.v.html  ct_u16_eq.v.html  ct_u16_slice_eq.v.html  ct_u32_eq.v.html  ct_u32_slice_eq.v.html  ct_u64_eq.v.html  ct_u64_slice_eq.v.html  ct_u8_eq.v.html  ct_u8_slice_eq.v.html  ct_usize_eq.v.html  ct_usize_slice_eq.v.html  fn.ct_copy_u16.html  fn.ct_copy_u32.html  fn.ct_copy_u64.html  fn.ct_copy_u8.html  fn.ct_copy_usize.html  fn.ct_select_u16.html  fn.ct_select_u32.html  fn.ct_select_u64.html  fn.ct_select_u8.html  fn.ct_select_usize.html  fn.ct_u16_eq.html  fn.ct_u16_slice_eq.html  fn.ct_u32_eq.html  fn.ct_u32_slice_eq.html  fn.ct_u64_eq.html  fn.ct_u64_slice_eq.html  fn.ct_u8_eq.html  fn.ct_u8_slice_eq.html  fn.ct_usize_eq.html  fn.ct_usize_slice_eq.html  (+2 more)
docs/src/consistenttime/src/: lib.rs.html
src/: lib.rs
