[package]
name = "consistenttime"
version = "0.0.1"
authors = ["William Cody Laeder <codylaeder@gmail.com>"]
repository = "https://github.com/valarauca/consistenttime.git"
homepage = "https://github.com/valarauca/consistenttime"
license = "Apache-2.0"
readme = "README.md"
documetation = "https://valarauca.github.io/consistenttime/consistenttime/index.html"
keywords = ["constant", "time", "consistent", "crypto"]

[dependencies]
