[package]
name = "consistenttime"
version = "0.2.0"
authors = ["William Cody Laeder <codylaeder@gmail.com>"]
repository = "https://github.com/valarauca/consistenttime.git"
homepage = "https://github.com/valarauca/consistenttime"
description = "Constant time operations for crypto libraries."
license = "Apache-2.0"
readme = "README.md"
documentation = "https://valarauca.github.io/consistenttime/consistenttime/index.html"
keywords = ["constant", "time", "consistent", "crypto"]

[dependencies]
